fix padding/alignment issues in header

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -53,9 +53,12 @@ header {
 	display: flex;
 	justify-content: space-between;
 
+	padding: 2rem 0 1rem 0;
+
 	nav {
 		ul {
 			list-style: none;
+			margin: 0;
 			li,svg {
 				display: inline;
 				padding: 0 5px;
